[project]
name = "expense-audit-env"
version = "1.0.0"
description = "An AI agent audits employee expense claims against company reimbursement policy"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai>=2.7.2",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/KshitijMittal07/expense-audit-env"